fix grid gap

--- a/src/css/about_the_game.css
+++ b/src/css/about_the_game.css
@@ -18,13 +18,16 @@
   .about-container {
     display: grid;
     grid-template-columns: 460px 788px;
-    grid-template-rows: auto 1fr;
     column-gap: 32px;
-    align-items: start;
+    align-self: center;
   }
+}
+@media screen and (min-width: 1440px) {
   .about-header {
-    grid-column: 1;
-    grid-row: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    height: 100%;
   }
 }
 .about-title {
@@ -58,8 +61,6 @@
 }
 @media screen and (min-width: 1440px) {
   .about-description {
-    grid-column: 1;
-    grid-row: 2;
     max-width: 460px;
     font-size: 16px;
   }
@@ -76,6 +77,7 @@
 @media screen and (min-width: 1440px) {
   .about-img {
     max-width: 788px;
+    height: 367px;
     border-radius: 40px;
     margin-bottom: 0;
     border-radius: 40px;
@@ -83,6 +85,6 @@
   }
   .img-wrapper {
     grid-column: 2;
-    grid-row: 1 / 3;
+    grid-row: 1 / span 2;
   }
 }
